--- a/style.css
+++ b/style.css
@@ -28,14 +28,15 @@ header{
 
 header h1{
    font-size: 80px;
-   margin-bottom: -4%;
 }
 
 header span{
+   position: relative;
    color: #f2dbce;
    text-transform: none;
    font-family: 'Caveat', cursive;
    font-size: 50px;
+   bottom: 50px;
 }
 
 form{
